# mnist-docker-gpu

./: .gitignore  Dockerfile  LICENSE  Makefile  mnist_cnn.pt  pyproject.toml
app/: ui.py
flagged/: log.csv
src/: build.py  cnn.py  constants.py  schemas.py  utils.py
src/configs/: mnist_cnn.yaml
src/models/: mnist_cnn.pt
